# freetype2

./: meson.build  meson_options.txt
builds/unix/: ftconfig.h.in
include/: configure-ftoption_h.py
subprojects/: .gitignore
